--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["markdown-it"],
     "target": "ES2020",
     "lib": ["DOM", "ES2020"],
     "module": "ESNext",
