--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@rsbuild/core": "^0.4.14",
-    "@rsbuild/plugin-vue": "^0.4.14",
+    "@rsbuild/core": "^1.0.0-alpha.5",
+    "@rsbuild/plugin-vue": "^1.0.0-alpha.5",
     "@types/markdown-it": "^14.1.2",
     "@types/markdown-it-anchor": "^4.0.4",
     "@types/prismjs": "^1.26.5",
