feat: add mermaid support, enhance mobile menu, and improve styling
- Added mermaid library for rendering diagrams in markdown content
- Enhanced mobile slide menu behavior and styling
- Improved overall layout and styling for better responsiveness
- Added BackToTop component for easier navigation

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-prism": "^2.3.1",
     "markdown-it-toc-done-right": "^4.2.0",
+    "mermaid": "^11.6.0",
     "prismjs": "^1.30.0",
     "vue": "^3.4.19",
     "vue-router": "^4.5.0"
